--- a/charts/namespace.yaml
+++ b/charts/namespace.yaml
@@ -1,4 +1,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: insurance
+  name: insurance-api
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: insurance-web
