update namespaces, rename userprofile.yaml

--- a/charts/trips/Trips.yaml
+++ b/charts/trips/Trips.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Deployment
 metadata:
   name: Trips
-  namespace: 
+  namespace: insurance-api 
 spec:
   containers:
     - name: trips
