--- a/charts/poi/poi.yaml
+++ b/charts/poi/poi.yaml
@@ -44,3 +44,17 @@ spec:
           value: "mydrivingDB"
         - name: ASPNETCORE_ENVIRONMENT
           value: "Local"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: poi-service
+  namespace: insurance-api
+spec:  
+  selector:
+    app: poi
+  ports:
+  - protocol: TCP
+    port: 8080
+    targetPort: 80
+  type: LoadBalancer
