sql user update

--- a/charts/secret-sql.yaml
+++ b/charts/secret-sql.yaml
@@ -5,5 +5,5 @@ metadata:
   name: sql-secret
 type: Opaque
 stringData:
-  SQL_USER: registrykua3387
+  SQL_USER: sqladminoMj3031
   SQL_PASSWORD: eaZYSLfuNsLSvgVH/i1huXMZ9Va59K4S
