--- a/charts/trips/Trips.yaml
+++ b/charts/trips/Trips.yaml
@@ -17,7 +17,7 @@ spec:
         image: registrykua3387.azurecr.io/trips
         imagePullPolicy: IfNotPresent
         ports:
-        #- containerPort: 80
+        - containerPort: 80
         resources:
           requests:
             cpu: 50m
@@ -42,3 +42,18 @@ spec:
           value: "mydrivingDB"
         - name: ASPNETCORE_ENVIRONMENT
           value: "Local"
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: trips-service
+  namespace: insurance-api
+spec:  
+  selector:
+    app: poi
+  ports:
+  - protocol: TCP
+    port: 8088
+    targetPort: 80
+  type: LoadBalancer
