--- a/charts/trips/Trips.yaml
+++ b/charts/trips/Trips.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Trips
+  name: trips
   namespace: insurance-api 
 spec:
   selector: 
@@ -19,12 +19,9 @@ spec:
         ports:
         - containerPort: 80
         resources:
-          requests:
-            cpu: 50m
-            memory: 50Mi
           limits:
-            cpu: 100m
-            memory: 200Mi
+            cpu: 1000m
+            memory: 2000Mi
         env:
         - name: SQL_USER
           valueFrom:
