trips - add label for selector

--- a/charts/trips/Trips.yaml
+++ b/charts/trips/Trips.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: trips
   namespace: insurance-api 
+  labels:
+    app: trips
 spec:
   selector: 
     matchLabels: 
