--- a/charts/userprofile/userprofile.yaml
+++ b/charts/userprofile/userprofile.yaml
@@ -50,6 +50,8 @@ spec:
     app: userprofile
   ports:
   - protocol: TCP
-    port: 8084
-    targetPort: 80
-  type: LoadBalancer
+    port: 80
+    #port: 8084
+    #targetPort: 80
+  type: ClusterIP
+  #type: LoadBalancer
