--- a/charts/poi/poi.yaml
+++ b/charts/poi/poi.yaml
@@ -52,6 +52,5 @@ spec:
     app: poi
   ports:
   - protocol: TCP
-    port: 8080
-    targetPort: 80
-  type: LoadBalancer
+    port: 80    
+  type: ClusterIP
