--- a/charts/user-java/user-java.yaml
+++ b/charts/user-java/user-java.yaml
@@ -50,6 +50,8 @@ spec:
     app: user-java
   ports:
   - protocol: TCP
-    port: 8083
-    targetPort: 80
-  type: LoadBalancer
+    port: 80
+    #port: 8083
+    #targetPort: 80
+  type: ClusterIP
+  #type: LoadBalancer
