--- a/charts/tripviewer/tripviewer.yaml
+++ b/charts/tripviewer/tripviewer.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: tripviewer
-  namespace: insurance-api
+  namespace: insurance-web
   labels:
     app: tripviewer
 spec:
@@ -23,15 +23,15 @@ spec:
 
         env:
         - name: USERPROFILE_API_ENDPOINT
-          value: "http://userprofile-service:80"
+          value: "http://userprofile-service.insurance-api:80"
         - name: TRIPS_API_ENDPOINT
-          value: "http://trips-service:80"
+          value: "http://trips-service.insurance-api:80"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: tripviewer-service
-  namespace: insurance-api
+  namespace: insurance-web
 spec:  
   selector:
     app: tripviewer
