--- a/charts/roles-insurance-api.yaml
+++ b/charts/roles-insurance-api.yaml
@@ -25,7 +25,7 @@ roleRef:
 subjects:
 - kind: Group
   namespace: insurance-api
-#  name: groupObjectId
+  name: c18bc486-3769-4abe-b37b-72cca3fd7c55
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
@@ -54,4 +54,4 @@ roleRef:
 subjects:
 - kind: Group
   namespace: insurance-api
-#  name: groupObject
+  name: b113fe3f-98c5-4070-a2b2-f0719adad3be
