--- a/charts/roles-insurance-web.yaml
+++ b/charts/roles-insurance-web.yaml
@@ -1,27 +1,22 @@
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: api-dev-role
+  name: api-dev-role-insurance-web
   namespace: insurance-web
-#rules:
-#- apiGroups: ["", "extensions", "apps"]
-#  resources: ["*"]
-#  verbs: ["*"]
-#- apiGroups: ["batch"]
-#  resources:
-#  - jobs
-#  - cronjobs
-#  verbs: ["*"]
+rules:
+- apiGroups: ["", "extensions", "apps"]
+  resources: ["*"]
+  verbs: ["get", "watch", "list"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: api-dev-role-binding
+  name: api-dev-role-binding-insurance-web
   namespace: insurance-web
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: api-dev-role
+  name: api-dev-role-insurance-web
 subjects:
 - kind: Group
   namespace: insurance-web
@@ -30,27 +25,22 @@ subjects:
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: web-dev-role
+  name: web-dev-role-insurance-web
   namespace: insurance-web
-#rules:
-#- apiGroups: ["", "extensions", "apps"]
-#  resources: ["*"]
-#  verbs: ["*"]
-#- apiGroups: ["batch"]
-#  resources:
-#  - jobs
-#  - cronjobs
-#  verbs: ["*"]
+rules:
+- apiGroups: ["", "extensions", "apps"]
+  resources: ["*"]
+  verbs: ["*"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: web-dev-role-binding
+  name: web-dev-role-binding-insurance-web
   namespace: insurance-web
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: web-dev-role
+  name: web-dev-role-insurance-web
 subjects:
 - kind: Group
   namespace: insurance-web
