--- a/charts/poi/poi.yaml
+++ b/charts/poi/poi.yaml
@@ -1,53 +1,53 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Pod
 metadata:
   name: poi
   namespace: insurance-api
   labels:
     app: poi
+    aadpodidbinding: "vault-identity"
 spec:
-  selector: 
-    matchLabels: 
-      app: poi
-  template:
-    metadata:
-      labels: 
-        app: poi
-    spec:
-      volumes:
-      - name: secrets-store-poi
-        csi:
-          driver: secrets-store.csi.k8s.io
-          readOnly: true
-          volumeAttributes:
-            secretProviderClass: "azure-kvname-podid"
-      containers:
-      - name: poi
-        image: registrykua3387.azurecr.io/poi
-        imagePullPolicy: IfNotPresent
-        volumeMounts:
-        - name: secrets-store-poi
-          mountPath: "/secrets"
-          readOnly: true
-        ports:
-        - containerPort: 80
-        env:
-        #- name: SQL_USER
-        #  valueFrom:
-        #    secretKeyRef:
-        #      name: sql-secret
-        #      key: SQL_USER
-        #- name: SQL_PASSWORD
-        #  valueFrom:
-        #    secretKeyRef:
-        #      name: sql-secret
-        #      key: SQL_PASSWORD
-        - name: SQL_SERVER
-          value: "sqlserverkua3387.database.windows.net"
-        - name: SQL_DBNAME
-          value: "mydrivingDB"
-        - name: ASPNETCORE_ENVIRONMENT
-          value: "Local"
+  volumes:
+  - name: secrets-store-poi
+    csi:
+      driver: secrets-store.csi.k8s.io
+      readOnly: true
+      volumeAttributes:
+        secretProviderClass: "azure-kvname-podid"
+  containers:
+  - name: poi
+    image: registrykua3387.azurecr.io/poi
+    volumeMounts:
+    - name: secrets-store-poi
+      mountPath: "/secrets"
+      readOnly: true
+    #args:
+    #  - --subscriptionid="34c68fe3-f615-4eb7-8925-4599d11b0aa6"
+    #  - --clientid="f2f5ebe3-80ef-44a9-a1d6-b2a7864c01e2"
+    #  - --resourcegroup="teamResources"
+    ports:
+    - containerPort: 80
+    env:
+      - name: MY_POD_NAME
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.name
+      - name: MY_POD_NAMESPACE
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.namespace
+      - name: MY_POD_IP
+        valueFrom:
+          fieldRef:
+            fieldPath: status.podIP
+      - name: SQL_SERVER
+        value: "sqlserverkua3387.database.windows.net"
+      - name: SQL_DBNAME
+        value: "mydrivingDB"
+      - name: ASPNETCORE_ENVIRONMENT
+        value: "Local"
+  nodeSelector:
+    kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
