--- a/charts/poi/poi.yaml
+++ b/charts/poi/poi.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: poi
   namespace: insurance-api
@@ -7,33 +7,43 @@ metadata:
     app: poi
     aadpodidbinding: "vault-identity"
 spec:
-  volumes:
-  - name: secrets-store-poi
-    csi:
-      driver: secrets-store.csi.k8s.io
-      readOnly: true
-      volumeAttributes:
-        secretProviderClass: "azure-kvname-podid"
-  containers:
-  - name: poi
-    image: registrykua3387.azurecr.io/poi
-    volumeMounts:
-    - name: secrets-store-poi
-      mountPath: "/mnt/secrets"
-      readOnly: true
-    ports:
-    - containerPort: 80
-    env:
-      - name: SQL_SERVER
-        value: "sqlserverkua3387.database.windows.net"
-      - name: SQL_DBNAME
-        value: "mydrivingDB"
-      - name: ASPNETCORE_ENVIRONMENT
-        value: "Local"
-      - name: CONFIG_FILES_PATH
-        value: "/mnt/secrets"
-  nodeSelector:
-    kubernetes.io/os: linux
+  selector: 
+    matchLabels: 
+      app: poi
+  template:
+    metadata:
+      labels: 
+        app: poi
+        aadpodidbinding: "vault-identity"
+    spec:
+      volumes:
+      - name: secrets-store-poi
+        csi:
+          driver: secrets-store.csi.k8s.io
+          readOnly: true
+          volumeAttributes:
+            secretProviderClass: "azure-kvname-podid"
+      containers:
+      - name: poi
+        image: registrykua3387.azurecr.io/poi
+        volumeMounts:
+        - name: secrets-store-poi
+          mountPath: "/mnt/secrets"
+          readOnly: true
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 80
+        env:
+          - name: SQL_SERVER
+            value: "sqlserverkua3387.database.windows.net"
+          - name: SQL_DBNAME
+            value: "mydrivingDB"
+          - name: ASPNETCORE_ENVIRONMENT
+            value: "Local"
+          - name: CONFIG_FILES_PATH
+            value: "/mnt/secrets"
+      nodeSelector:
+        kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
